# truncated_graphs

./: CLAUDE.md  README.md  configs-ramses.json  configs.json  environment.yml  fit_palette.json  pyproject.toml
bosperrus/: main.tex  olplainarticle.cls  sample.bib
notebooks/: 0_real_data_delaunay.ipynb  0_real_data_kNN.ipynb  0_real_data_radius.ipynb  1_del_centralities.ipynb  1_del_centralities_example.ipynb  2_sphere.ipynb  2_sphere_corrs.ipynb  SERN.ipynb  Untitled.ipynb  delaunay_square.ipynb  edge_effect_in_BBP.ipynb  figure0.ipynb  figure0a.ipynb  figure1.ipynb  figure1_de.ipynb  figure1_fgh.ipynb  figure2.ipynb  figure2abcd.ipynb  figure2ef.ipynb  figure3.ipynb  figure3_a.ipynb  figure4a.ipynb  figure4b.ipynb  first_analyses.ipynb  general_procedure.ipynb  github_repo_figure1.ipynb  jackson_bc_data.ipynb  kNN_square.ipynb  microns_edge_effect_comparison.ipynb  optimization.ipynb  pipeline_figure.ipynb  sern_Test.ipynb  snap_data.ipynb  squidpy_example.ipynb  timezones_snap_data.ipynb  urbanity_snap_data.ipynb
notebooks/.ipynb_checkpoints/: first_analyses-checkpoint.ipynb
notebooks/exploratory/: BLADE_boundary_effects.ipynb  analyze_visium_hd.ipynb  edge_effect_in_BBP.ipynb  squidpy_example.ipynb
notebooks/figure1/: pipeline_figure.ipynb
notebooks/figure4/: Microns check edge effect bosperrus.ipynb  Microns check edge effect original REIMANN.ipynb  analyze_visium_hd.ipynb
src/: __init__.py  border_effects_kNN_del.py  calculate_centralities.py  evaluate_fit.py  figure_2.py  fit.py  make_pipeline_fig.py  sern.py  sphere.py  truncated_graphs.py
(+448 files in other folders)
