[project]
name = "bosperrus-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alphashape>=1.3.1",
    "bosperrus>=0.1.0",
    "connectome-utilities>=0.4.12",
    "descartes>=1.1.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "squidpy>=1.8.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "alphashape>=1.3.1",
    "pytest>=9.1.1",
]
